<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="3dp">

        <Button
            android:id="@+id/buttonRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparente"
            android:text="@string/Registrarse"
            android:textColor="@color/rosado"
            android:textSize="16sp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="213dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="32dp"
            app:srcCompat="@drawable/cityplan_purple" />

        <TextView
            android:id="@+id/IniciosesionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inicia sesión"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_plan"
            android:ems="10"
            app:errorEnabled="true"
            android:hint="Correo"
            android:inputType="text"
            android:padding="9dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_plan"
            android:ems="10"
            app:helperText=""
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            android:hint="@string/Contraseña"
            android:inputType="text"
            android:padding="9dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/buttonIniciarSesion"
                android:layout_width="244dp"
                android:layout_height="84dp"
                android:backgroundTint="@color/rosado"
                android:padding="2dp"
                android:text="@string/IniciarSesión"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>