<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradoOscuro"
    android:padding="15dp"
    tools:context=".CrearPlanActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/editarPlanTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarPlanTitle"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imagenPlan"
            android:layout_width="187dp"
            android:layout_height="124dp"
            android:layout_centerInParent="true"
            android:layout_margin="30dp"
            app:srcCompat="@drawable/perfilplan" />

        <EditText
            android:id="@+id/nombrePlan"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/puntas_blancas"
            android:drawableRight="@drawable/edit"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:paddingRight="10dp"
            android:text="Salida a Varietale"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/editarplanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/fechaInicioTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarfechaInicioTitle"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calendarioImg3"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/calendar" />

            <EditText
                android:id="@+id/fechaInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="date"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/FechaFinTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarFechaFinTitle"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calendarioImg2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/calendar" />

            <EditText
                android:id="@+id/editTextText66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="date"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/editarPuntoEncuentroTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puntoEncuentroTitle"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pinImg"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                tools:srcCompat="@drawable/pin" />

            <Button
                android:id="@+id/seleccionarUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:backgroundTint="@color/transparente"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editatActivoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/editatActivoTitle"
                android:textColor="@color/white" />

            <Switch
                android:id="@+id/switchPasos"
                android:layout_width="127dp"
                android:layout_height="46dp"
                android:layout_below="@id/aunsiguesText"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/pasosLayOut"
                android:checked="true"
                android:thumb="@drawable/thumb_pasos"
                android:track="@drawable/track" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EditarFotoEncuentroTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Editar foto encuentro"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/pinPlanImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/iconopin" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/editarplanButton"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/amarillo"
        android:text="Editar plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>